[package]
name = "hts221"
version = "0.2.0"
authors = ["Daniel Gallagher <pdanielgallagher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Interface to ST Micro HTS221 humidity and temperature sensor"
keywords = ["i2c", "bare-metal", "embedded-hal-driver"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danielgallagher0/hts221"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.0"

[dev-dependencies]
cortex-m-semihosting = "0.3.0"
embedded-hal = "0.2.0"
linux-embedded-hal = "0.2.2"

[dev-dependencies.cortex-m]
version = "0.5.0"

[dev-dependencies.cortex-m-rt]
version= "0.5.0"

[dev-dependencies.stm32f30x]
version = "0.7.0"
features = ["rt"]

[dev-dependencies.stm32f30x-hal]
version = "0.2.0"
features = ["rt"]
