[package]
edition = "2018"
name = "hts221"
version = "0.2.0"
authors = ["Daniel Gallagher <pdanielgallagher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Interface to ST Micro HTS221 humidity and temperature sensor"
keywords = ["i2c", "bare-metal", "embedded-hal-driver"]
license = "MIT/Apache-2.0"
repository = "https://github.com/danielgallagher0/hts221"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.3"

[dev-dependencies]
cortex-m-semihosting = "0.3.5"
linux-embedded-hal = "0.2.2"

[dev-dependencies.cortex-m]
version = "0.6.1"

[dev-dependencies.cortex-m-rt]
version= "0.6.10"

[dev-dependencies.stm32f30x-hal]
version = "0.2.0"
features = ["rt"]
